@@ -1321,6 +1321,7 @@ hypersearch-results.remove-node=Remove Node
 hypersearch-results.new-search=New Search From Here
 hypersearch-results.expand-child-nodes=Expand Child Nodes
 hypersearch-results.collapse-child-nodes=Collapse Child Nodes
+hypersearch-results.redo=Redo hypersearch
 hypersearch-results.tree-view=Toggle Tree View
 hypersearch-results.clear.label=Remove All Nodes
 hypersearch-results.multi.label=Toggle Multiple Results
